--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,11 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "Launch Admin API",
-            "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
+            "runtimeExecutable":
+                "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable":
+                    "${workspaceRoot}/scripts/node_modules/.bin/ts-node.cmd"
             },
             "runtimeArgs": ["src/index.ts"],
             "args": [],
@@ -24,7 +26,8 @@
             "name": "Launch Project Open Data Connector",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable":
+                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -46,7 +49,8 @@
             "name": "Launch CSW Connector",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable":
+                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -65,10 +69,27 @@
             "type": "node",
             "request": "launch",
             "protocol": "inspector",
+            "name": "CSW Connector Test Cases",
+            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "cwd": "${workspaceRoot}/magda-csw-connector",
+            "args": [
+                "--compilers",
+                "ts:ts-node/register",
+                "--require",
+                "tsconfig-paths/register",
+                "src/test/**/*.spec.ts"
+            ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "protocol": "inspector",
             "name": "Minion Format",
-            "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
+            "runtimeExecutable":
+                "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable":
+                    "${workspaceRoot}/scripts/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -95,7 +116,8 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "magda-admin-api tests",
-            "program": "${workspaceRoot}/magda-admin-api/node_modules/mocha/bin/_mocha",
+            "program":
+                "${workspaceRoot}/magda-admin-api/node_modules/mocha/bin/_mocha",
             "cwd": "${workspaceRoot}/magda-admin-api",
             "args": [
                 "--compilers",
@@ -140,7 +162,8 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "minion-linked-data-rating",
-            "program": "${workspaceRoot}/magda-minion-linked-data-rating/node_modules/mocha/bin/_mocha",
+            "program":
+                "${workspaceRoot}/magda-minion-linked-data-rating/node_modules/mocha/bin/_mocha",
             "cwd": "${workspaceRoot}/magda-minion-linked-data-rating",
             "args": [
                 "--compilers",
@@ -187,7 +210,8 @@
             "name": "Launch Gateway",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable":
+                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -224,7 +248,8 @@
             "name": "Launch Web Server",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable":
+                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -239,7 +264,8 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "Launch Auth API",
-            "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
+            "runtimeExecutable":
+                "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
             "cwd": "${workspaceRoot}/magda-authorization-api",
             "args": [
                 "src/index.ts",
@@ -261,7 +287,8 @@
                 "SESSION_SECRET": "keyboard cat",
                 "FACEBOOK_CLIENT_ID": "173073926555600",
                 "FACEBOOK_CLIENT_SECRET": "none",
-                "GOOGLE_CLIENT_ID": "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com",
+                "GOOGLE_CLIENT_ID":
+                    "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com",
                 "GOOGLE_CLIENT_SECRET": "none"
             }
         },
@@ -295,7 +322,8 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "create-docker-context-for-node-component",
-            "program": "${workspaceRoot}/scripts/create-docker-context-for-node-component.js",
+            "program":
+                "${workspaceRoot}/scripts/create-docker-context-for-node-component.js",
             "cwd": "${workspaceRoot}/magda-gateway",
             "args": ["--output", "foo.tar.gz"]
         },
@@ -306,7 +334,8 @@
             "name": "Ckan Connector",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable":
+                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
