--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -41,6 +41,7 @@ defaultRoutes:
     auth: true
   content:
     to: http://content-api/v0
+    auth: true
   correspondence:
     to: http://correspondence-api/v0/public
   apidocs:
