--- a/magda-web-server/package.json
+++ b/magda-web-server/package.json
@@ -25,12 +25,12 @@
     "@types/morgan": "^1.7.35",
     "@types/nock": "^8.2.1",
     "@types/read-pkg-up": "^3.0.1",
-    "@types/request": "2.47.0",
+    "@types/request": "^2.48.1",
     "@types/sinon": "^2.3.3",
     "@types/supertest": "^2.0.2",
     "@types/urijs": "^1.15.34",
     "@types/xml2js": "^0.4.0",
-    "@types/yargs": "^6.6.0",
+    "@types/yargs": "^12.0.8",
     "chai": "^4.1.0",
     "mocha": "^3.4.2",
     "nock": "^9.0.14",
@@ -46,10 +46,10 @@
     "express": "^4.15.3",
     "morgan": "^1.9.0",
     "read-pkg-up": "^3.0.0",
-    "request": "2.85.0",
+    "request": "^2.88.0",
     "sitemap": "^1.13.0",
     "urijs": "^1.18.12",
-    "yargs": "^8.0.2"
+    "yargs": "^12.0.5"
   },
   "config": {
     "docker": {
