--- a/magda-admin-api/package.json
+++ b/magda-admin-api/package.json
@@ -44,7 +44,7 @@
     "request-debug": "^0.2.0",
     "sinon": "^3.2.1",
     "supertest": "^3.0.0",
-    "typescript": "~2.4.0"
+    "typescript": "^3.2.0"
   },
   "config": {
     "docker": {
