--- a/magda-db-migrator/package.json
+++ b/magda-db-migrator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/db-migrator",
-  "version": "0.0.51-RC5",
+  "version": "0.0.51",
   "description": "A base Docker image for PostgreSQL with Flyway for schema migrations.",
   "scripts": {
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
@@ -17,7 +17,7 @@
     }
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.51-RC5"
+    "@magda/scripts": "^0.0.51"
   },
   "magda": {
     "categories": {
