--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -355,6 +355,21 @@
                 "squirrel"
             ],
             "cwd": "${workspaceRoot}/magda-ckan-connector"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "protocol": "inspector",
+            "name": "Ckan connector tests",
+            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "cwd": "${workspaceRoot}/magda-ckan-connector",
+            "args": [
+                "--compilers",
+                "ts:ts-node/register",
+                "--require",
+                "tsconfig-paths/register",
+                "src/test/**/*.spec.ts"
+            ]
         }
     ]
 }
