--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -124,6 +124,14 @@ spec:
               key: facebook-client-secret
               optional: true
 {{- end }}
+{{- if .Values.auth.vanguardWsFedRealm }}
+        - name: VANGUARD_CERTIFICATE
+          valueFrom:
+            secretKeyRef:
+              name: oauth-secrets
+              key: vanguard-certificate
+              optional: true
+{{- end }}
 {{- if .Values.auth.arcgisClientId }}
         - name: ARCGIS_CLIENT_SECRET
           valueFrom:
