--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@magda/web-client",
   "description": "The MAGDA in-browser web front end.",
-  "version": "0.0.56-0",
+  "version": "0.0.56-RC1",
   "license": "Apache-2.0",
   "scripts": {
     "storybook": "start-storybook -p 9001 -c .storybook -s ./public",
@@ -65,8 +65,8 @@
   },
   "devDependencies": {
     "@craco/craco": "^5.0.2",
-    "@magda/registry-aspects": "^0.0.56-0",
-    "@magda/scripts": "^0.0.56-0",
+    "@magda/registry-aspects": "^0.0.56-RC1",
+    "@magda/scripts": "^0.0.56-RC1",
     "@storybook/addon-actions": "^3.3.3",
     "@storybook/addon-links": "^3.3.3",
     "@storybook/addons": "^3.3.3",
