--- a/magda-content-api/package.json
+++ b/magda-content-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/content-api",
-  "version": "0.0.56-0",
+  "version": "0.0.56-nsw-0",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -13,8 +13,8 @@
     "retag-and-push": "retag-and-push"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.56-0",
-    "@magda/content-schemas": "^0.0.56-0",
+    "@magda/content-schemas": "^0.0.56-nsw-0",
+    "@magda/typescript-common": "^0.0.56-nsw-0",
     "body-parser": "^1.13.2",
     "djv": "^2.1.1",
     "express": "^4.13.1",
@@ -28,7 +28,7 @@
     "yargs": "^12.0.5"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.56-0",
+    "@magda/scripts": "^0.0.56-nsw-0",
     "@types/chai": "^4.1.2",
     "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.96",
